need a lot of work

--- a/simple_form/templates/form.html
+++ b/simple_form/templates/form.html
@@ -4,7 +4,7 @@
     <title> Form </title>
   </head>
   <body>
-    What are you?
+    Login in to this great site you can register here <a href={{route}}> register </a>
     <form action="authenticate/"  method="POST">
       username<input type="text", name="user">
       password<input type="password", name="pass">
