--- a/simple_form/templates/register.html
+++ b/simple_form/templates/register.html
@@ -6,7 +6,7 @@ register
 </title>
 </head>
 <body>
-    register
+    You do not exist, you should register
     <form action="register/"  method="POST">
       username<input type="text", name="user">
       password<input type="password", name="pass">
