--- a/simple_form/templates/form.html
+++ b/simple_form/templates/form.html
@@ -8,7 +8,9 @@
     <form action="authenticate/"  method="POST">
       username<input type="text", name="user">
       password<input type="password", name="pass">
-      <input type="submit">
+      <input type="submit" value="login">
+      <input type="submit" value="register">
+      
     </form>
   </body>
 </html>
