its working now

--- a/simple_form/templates/form.html
+++ b/simple_form/templates/form.html
@@ -8,8 +8,8 @@
     <form action="authenticate/"  method="POST">
       username<input type="text", name="user">
       password<input type="password", name="pass">
-      <input type="submit" value="login">
-      <input type="submit" value="register">
+      <input type="submit", name="login", value="login">
+      <input type="submit", name="reg", value="register">
       
     </form>
   </body>
